--- a/src/aruhaz/Felvitel.form
+++ b/src/aruhaz/Felvitel.form
@@ -24,11 +24,6 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="lbCim" min="-2" pref="177" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-          </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -38,35 +33,35 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lbKat" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lbTelep" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lbAr" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lbKep" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="tfKepPath" max="32767" attributes="0"/>
-                          <Component id="cbKategoria" alignment="0" max="32767" attributes="0"/>
-                          <Component id="cbTelepules" alignment="0" max="32767" attributes="0"/>
-                          <Component id="tfAr" alignment="0" max="32767" attributes="0"/>
-                          <Component id="tfNev" alignment="1" max="32767" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnTalloz" min="-2" pref="25" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="btnFelvisz" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="btnKilepesF" min="-2" pref="69" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lbKat" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lbTelep" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lbKep" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lbNev1" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="tfKepPath" max="32767" attributes="0"/>
+                                  <Component id="cbKategoria" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="cbTelepules" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="tfAr" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="tfNev" alignment="1" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="btnTalloz" min="-2" pref="25" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" alignment="0" attributes="0">
+                          <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="lbLeir" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="spLeiras" alignment="0" min="-2" pref="318" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="btnFelvisz" min="-2" pref="120" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="btnKilepesF" min="-2" pref="129" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -78,17 +73,15 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-              <Component id="lbCim" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="tfNev" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lbNev" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lbAr" alignment="3" min="-2" pref="4" max="-2" attributes="0"/>
                   <Component id="tfAr" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbNev1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -101,23 +94,19 @@
                   <Component id="cbKategoria" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="tfKepPath" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnTalloz" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="lbLeir" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                      <Component id="spLeiras" min="-2" pref="92" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="btnFelvisz" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnKilepesF" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Component id="lbKep" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="tfKepPath" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnTalloz" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                  <Component id="lbKep" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="lbLeir" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="spLeiras" min="-2" pref="92" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="btnFelvisz" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnKilepesF" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -144,11 +133,6 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="tfKepPath">
-    </Component>
-    <Component class="javax.swing.JLabel" name="lbAr">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="&#xc1;r:"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lbTelep">
       <Properties>
@@ -186,14 +170,6 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JLabel" name="lbCim">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="22" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Term&#xe9;k felvitele"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JTextField" name="tfNev">
       <Properties>
         <Property name="toolTipText" type="java.lang.String" value="Minta J&#xe1;nos"/>
@@ -203,6 +179,12 @@
     <Component class="javax.swing.JButton" name="btnFelvisz">
       <Properties>
         <Property name="text" type="java.lang.String" value="Felvitel"/>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[68, 32]"/>
+        </Property>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[68, 32]"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFelviszActionPerformed"/>
@@ -219,12 +201,7 @@
     <Component class="javax.swing.JComboBox" name="cbTelepules">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <AuxValues>
@@ -234,17 +211,20 @@
     <Component class="javax.swing.JComboBox" name="cbKategoria">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbKategoriaActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lbNev1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="&#xc1;r:"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
