--- a/src/aruhaz/View.form
+++ b/src/aruhaz/View.form
@@ -79,20 +79,6 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
-        <Container class="javax.swing.JPanel" name="pCsoportositas">
-          <Properties>
-            <Property name="enabled" type="boolean" value="false"/>
-          </Properties>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Kateg&#xf3;ria n&#xe9;zet">
-                <Property name="tabTitle" type="java.lang.String" value="Kateg&#xf3;ria n&#xe9;zet"/>
-              </JTabbedPaneConstraints>
-            </Constraint>
-          </Constraints>
-
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
-        </Container>
         <Container class="javax.swing.JPanel" name="pTermekek">
           <Properties>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -200,6 +186,20 @@
             </Container>
           </SubComponents>
         </Container>
+        <Container class="javax.swing.JPanel" name="pCsoportositas">
+          <Properties>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
+              <JTabbedPaneConstraints tabName="Kateg&#xf3;ria n&#xe9;zet">
+                <Property name="tabTitle" type="java.lang.String" value="Kateg&#xf3;ria n&#xe9;zet"/>
+              </JTabbedPaneConstraints>
+            </Constraint>
+          </Constraints>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
+        </Container>
       </SubComponents>
     </Container>
     <Component class="javax.swing.JButton" name="btnTermekHozzaad">
@@ -247,7 +247,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnArakModositas">
       <Properties>
-        <Property name="text" type="java.lang.String" value="&#xc1;rak m&#xf3;dos&#xed;t&#xe1;sa..."/>
+        <Property name="text" type="java.lang.String" value="&#xc1;r m&#xf3;dos&#xed;t&#xe1;s..."/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnArakModositasActionPerformed"/>
