--- a/src/View/Hozzaadas.form
+++ b/src/View/Hozzaadas.form
@@ -96,11 +96,13 @@
                   <Component id="cbKategoria" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="tfKepPath" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lbKep" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnTalloz" alignment="3" min="-2" pref="16" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnKepMegnyitasa" alignment="0" min="-2" pref="24" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="tfKepPath" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lbKep" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnTalloz" alignment="3" min="-2" pref="16" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace type="separate" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -113,12 +115,12 @@
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lb30200" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                       <Component id="l200" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="lbKarakterSzam" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="lb30200" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
